--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -64,7 +64,8 @@
 
 .icon-styled{
     border-radius: 15px;
-    margin: 2px;
+    margin-bottom: 23px;
+    margin-right: 20px;
     font-size: 30px;
     margin-top: 10px;
 }
@@ -149,7 +150,7 @@
 }
 
 .main-selector{
-    left: 31.8%;
+    left: 29.4%;
 
 }
 
